# openai-lib

./: CHANGELOG.md  LICENSE  README.md  openai-lib.cabal
app/: Main.hs
src/Domain/Chat/Completion/Entity/: ChatCompletionFunctions.hs  ChatCompletionRequestMessage.hs  CreateChatCompletionRequest.hs  EndUserParamConfiguration.hs  FunctionCall.hs
src/Domain/Models/: README.md
src/Domain/Models/Entity/: ListModelsResponse.hs  Model.hs  ModelList.hs  ModelPermission.hs
src/Domain/Models/Repository/HTTP/: DeleteModel.hs  ListModels.hs  RetrieveModel.hs
src/Domain/Models/Usecases/: Client.hs
src/ValueObject/Entity/: Error.hs  ErrorResponse.hs  OpenAIConfiguration.hs
src/ValueObject/Repository/Env/: EnvConfiguration.hs
src/ValueObject/Repository/HTTP/: Constants.hs
test/: Tests.hs
test/Domain/Models/Entity/: ModelPermissionTest.hs  ModelTest.hs
test/Domain/Models/Repository/HTTP/: ListModelsTest.hs
test/ValueObject/Entity/: ErrorTest.hs  OpenAIConfigurationTest.hs
test/ValueObject/Repository/Env/: EnvConfigurationTest.hs
